correcting spacing between avatar and name

--- a/src/styles/components/PostHeader.module.css
+++ b/src/styles/components/PostHeader.module.css
@@ -14,7 +14,7 @@
 .postHeader .NameAndHours {
     display: flex;
     flex-direction: column;
-    margin-left: 8px;
+    margin-left: 14px;
 }
 
 .postHeader .NameAndHours strong {
